# brownsea

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
.github/workflows/: test.yml
brownsea/accounts/: apps.py  models.py  oauth_registry.py  urls.py  views.py
brownsea/accounts/migrations/: 0001_initial.py
brownsea/core/: apps.py  blocks.py  models.py  urls.py  wagtail_hooks.py  wsgi.py
brownsea/core/migrations/: 0001_initial.py  0002_add_alert_banner.py  0003_add_author_snippet.py
brownsea/core/settings/: base.py  dev.py  production.py
brownsea/events/: apps.py  urls.py  views.py  wagtail_hooks.py
brownsea/events/migrations/: 0001_initial.py
brownsea/events/models/: __init__.py  pages.py  snippets.py
brownsea/home/: apps.py  models.py
brownsea/home/migrations/: 0001_initial.py
brownsea/navigation/: apps.py  models.py  struct_values.py
brownsea/navigation/migrations/: 0001_initial.py
brownsea/navigation/templatetags/: nav_tags.py
brownsea/news/: apps.py  wagtail_hooks.py
brownsea/news/migrations/: 0001_initial.py  0002_alter_articlepage_body.py  0002_fix_streamfield.py
brownsea/news/models/: pages.py  snippets.py
brownsea/search/: views.py
brownsea/standard_pages/: apps.py  models.py
brownsea/standard_pages/migrations/: 0001_initial.py  0002_processpage.py
brownsea/standard_pages/templatetags/: process_tags.py
brownsea/static_src/: calendar.ts  main.ts  mermaid.ts
brownsea/static_src/scss/: _calendar.scss  _variables.scss  main.scss
brownsea/static_src/scss/components/: _author_card.scss  _footer.scss  _logo.scss  _mermaid_diagram.scss  _process_step.scss  index.scss
brownsea/static_src/scss/overrides/: _accordion.scss  _breadcrumb.scss  _navbar.scss  index.scss
brownsea/suppliers/: README.md  apps.py  wagtail_hooks.py
brownsea/suppliers/migrations/: 0001_initial.py
brownsea/suppliers/models/: __init__.py  pages.py  snippets.py
brownsea/templates/: base.html
brownsea/templates/components/: alert_banner.html  author_card.html  breadcrumbs.html  in_page_nav.html  link_card.html  news_card.html  preview_wrapper.html  quick_links.html  recent_news_card.html
brownsea/templates/components/navigation/: pagination.html  primary_nav.html
brownsea/templates/components/search/: search_form.html  search_results.html
brownsea/templates/components/suppliers/: review_card.html  supplier_card.html
brownsea/templates/pages/accounts/: login.html
brownsea/topics/: apps.py  models.py
brownsea/topics/migrations/: 0001_initial.py
docker/: entrypoint.sh  start.sh
(+36 files in other folders)
